--- a/frontend/RWStation/dialogs/logindialog.ui
+++ b/frontend/RWStation/dialogs/logindialog.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>LoginDialog</class>
  <widget class="QWidget" name="LoginDialog">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -131,14 +134,14 @@
             <number>5</number>
            </property>
            <item>
-            <widget class="QLabel" name="loginLabel">
+            <widget class="QLabel" name="usernameLabel">
              <property name="text">
               <string>Логин</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="loginInput"/>
+            <widget class="QLineEdit" name="usernameInput"/>
            </item>
           </layout>
          </item>
