--- a/frontend/RWStation/mainwindow.ui
+++ b/frontend/RWStation/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QStackedWidget" name="pagesWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="HomePage">
        <property name="sizePolicy">
@@ -620,7 +620,7 @@
              <string notr="true">font-size: 12pt; font-weight: 700;</string>
             </property>
             <property name="text">
-             <string>Пассажиры</string>
+             <string>Расписание</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
