--- a/frontend/RWStation/modals/addschedulemodal.ui
+++ b/frontend/RWStation/modals/addschedulemodal.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>250</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>250</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>400</width>
+    <height>250</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -48,28 +60,28 @@
         <number>20</number>
        </property>
        <item>
-        <layout class="QGridLayout" name="gridLayout" columnstretch="1,0">
+        <layout class="QGridLayout" name="gridLayout" columnstretch="1,1">
          <property name="sizeConstraint">
           <enum>QLayout::SetMinimumSize</enum>
          </property>
-         <item row="1" column="1">
+         <item row="0" column="1">
           <layout class="QVBoxLayout" name="inputGroup_8">
            <property name="spacing">
             <number>5</number>
            </property>
            <item>
-            <widget class="QLabel" name="arrivalStationLabel">
+            <widget class="QLabel" name="trainLabel">
              <property name="text">
-              <string>Станция прибытия</string>
+              <string>Поезд</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QComboBox" name="arrStationComboBox"/>
+            <widget class="QComboBox" name="trainComboBox"/>
            </item>
           </layout>
          </item>
-         <item row="2" column="1">
+         <item row="1" column="1">
           <layout class="QVBoxLayout" name="inputGroup_9">
            <property name="spacing">
             <number>5</number>
@@ -86,7 +98,24 @@
            </item>
           </layout>
          </item>
-         <item row="2" column="0">
+         <item row="0" column="0">
+          <layout class="QVBoxLayout" name="inputGroup_7">
+           <property name="spacing">
+            <number>5</number>
+           </property>
+           <item>
+            <widget class="QLabel" name="routeLabel">
+             <property name="text">
+              <string>Маршрут</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="routeComboBox"/>
+           </item>
+          </layout>
+         </item>
+         <item row="1" column="0">
           <layout class="QVBoxLayout" name="inputGroup_10">
            <property name="spacing">
             <number>5</number>
@@ -100,44 +129,6 @@
            </item>
            <item>
             <widget class="QDateTimeEdit" name="depDateInput"/>
-           </item>
-          </layout>
-         </item>
-         <item row="1" column="0">
-          <layout class="QVBoxLayout" name="inputGroup_7">
-           <property name="spacing">
-            <number>5</number>
-           </property>
-           <item>
-            <widget class="QLabel" name="departureStationLabel">
-             <property name="text">
-              <string>Станция отправления</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QComboBox" name="depStationComboBox"/>
-           </item>
-          </layout>
-         </item>
-         <item row="0" column="0" colspan="2">
-          <layout class="QVBoxLayout" name="inputGroup_6">
-           <property name="spacing">
-            <number>5</number>
-           </property>
-           <item>
-            <widget class="QLabel" name="nameLabel">
-             <property name="text">
-              <string>Название</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="nameInput">
-             <property name="echoMode">
-              <enum>QLineEdit::Normal</enum>
-             </property>
-            </widget>
            </item>
           </layout>
          </item>
