--- a/frontend/RWStation/mainwindow.ui
+++ b/frontend/RWStation/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
+    <width>750</width>
     <height>600</height>
    </rect>
   </property>
@@ -657,7 +657,7 @@
       <widget class="QWidget" name="SchedulePage">
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_9" stretch="0,0,0">
+         <layout class="QVBoxLayout" name="verticalLayout_9" stretch="0,0,0,0">
           <property name="spacing">
            <number>20</number>
           </property>
@@ -696,16 +696,6 @@
              <number>7</number>
             </property>
             <item>
-             <widget class="QPushButton" name="backScheduleButton">
-              <property name="cursor">
-               <cursorShape>PointingHandCursor</cursorShape>
-              </property>
-              <property name="text">
-               <string>Назад</string>
-              </property>
-             </widget>
-            </item>
-            <item>
              <spacer name="horizontalSpacer_9">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -730,13 +720,33 @@
             </item>
             <item>
              <widget class="QPushButton" name="getScheduleTicketsAmount">
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
               <property name="text">
                <string>Количество проданных билетов</string>
               </property>
              </widget>
             </item>
+           </layout>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="buttonsLayout_9">
+            <property name="spacing">
+             <number>7</number>
+            </property>
             <item>
-             <spacer name="horizontalSpacer_8">
+             <widget class="QPushButton" name="backScheduleButton_2">
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
+              <property name="text">
+               <string>Назад</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_10">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -749,7 +759,20 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="refreshScheduleButton">
+             <spacer name="horizontalSpacer_11">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="refreshScheduleButton_2">
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
@@ -759,7 +782,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="addScheduleButton">
+             <widget class="QPushButton" name="addScheduleButton_2">
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
