--- a/frontend/RWStation/modals/getschedulerevenuemodal.ui
+++ b/frontend/RWStation/modals/getschedulerevenuemodal.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>586</width>
-    <height>412</height>
+    <width>550</width>
+    <height>410</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>550</width>
+    <height>410</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>550</width>
+    <height>410</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
