--- a/frontend/RWStation/mainwindow.ui
+++ b/frontend/RWStation/mainwindow.ui
@@ -837,7 +837,7 @@
         </item>
         <item>
          <layout class="QGridLayout" name="redirectButtons_2" rowstretch="0,0">
-          <item row="0" column="0">
+          <item row="0" column="1">
            <widget class="QPushButton" name="passengerAdditionalButton">
             <property name="cursor">
              <cursorShape>PointingHandCursor</cursorShape>
@@ -847,10 +847,20 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
+          <item row="0" column="2">
            <widget class="QPushButton" name="scheduleAnyAllButton">
             <property name="text">
              <string>Рейсы (any/all)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QPushButton" name="scheduleViewButton">
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
+            <property name="text">
+             <string>Расписание</string>
             </property>
            </widget>
           </item>
